--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         dạng, tốc độ ngày càng tăng và kích thước ngày càng giảm theo thời gian.
         Một nhánh của Khoa học Máy tính có tên là Trí tuệ nhân tạo (AI) đang
         theo đuổi việc tạo ra các máy tính hoặc máy móc thông minh như con
-        người.</i
-      >
+        người.</i>
     </p>
     <h2>Trí tuệ nhân tạo (AI) là gì?</h2>
     <p>
@@ -274,6 +273,6 @@
         <li>Phần mềm - Nhận dạng mẫu trong nhận dạng khuôn mặt, nhận dạng ký tự quang học, v.v.</li>
         <li>Xử lý tín hiệu - Mạng nơ-ron có thể được đào tạo để xử lý tín hiệu âm thanh và lọc tín hiệu đó một cách thích hợp trong máy trợ thính.</li>
     </ul>
-    <p>(Nguồn:<span><a href="https://www.tutorialspoint.com">https://www.tutorialspoint.com</a></span>)</p>
+    <p>(Nguồn:<span><a href="https://www.tutorialspoint.com" target="_blank">https://www.tutorialspoint.com</a></span>)</p>
   </body>
 </html>
